--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="h12">
     <header>
         <nav>
-            <img src="/Images/Ella-Logos-02.png" alt="#" width="161px" height="34px">
+            <img src="Images/Ella-Logos-02.png" alt="#" width="161px" height="34px">
             <div class="nav-link">
                 <ul class="nav-links">
                     <li><a href="#">Home</a> </li>
@@ -36,7 +36,7 @@
                         Co-own prime <span class="re">real estate</span>  in multiple <span class="re">countries</span> and currencies
                     </h1>
                     <p>
-                        Buy and sell multifamily houses, commercial properties <br> and building land easily online.
+                        Buy and sell multifamily houses, commercial properties and building land easily online.
                     </p>
 
                     <div class="app">
