--- a/index.html
+++ b/index.html
@@ -63,8 +63,24 @@
             </section>
             <section class="container-2">
                 <div class="ella-doings">
-                    <i class="fa-solid fa-square-star"></i>
-                    <p>Start owning real estate in Nigeria, US, UK and Dubai with as little as $100</p3>
+                    <p>Start owning real estate in Nigeria, US, UK and Dubai with as little as $100</p>
+                    <img src="Images/pexels-oleksandr-pidvalnyi-7599735.jpg" alt="#" width="489px" height="630px" >
+                </div>
+
+                <div class="ella-doings">
+                    <img src="Images/steeph-almer-wjNX2i14QlU-unsplash.jpg" alt="#" width="489px" height="630px" >
+                    <p>Buy and sell real estate in fractions on a safe and secure platform</p>
+                </div>
+
+                <div class="ella-doings">
+                    <p>Spread payments for up to 12 months.</p>
+                    <img src="Images/payment.jpg" alt="#" width="489px" height="630px" >
+                </div>
+
+                <div class="ella-doings">
+                    
+                    <img src="Images/jar-coins.jpg" alt="#" width="489px" height="630px" >
+                    <p>Earn passive income in foreign currency.</p>
                 </div>
             </section>
             
