--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="partners">
                     <h4>Partners And Members:</h4>
                     <div class="trusted-img">
-                        <img src="/Images/Flutterwave.png" alt="flutterwave" width="140px" height="60px">
+                        <img src="Images/Flutterwave.png" alt="flutterwave" width="140px" height="60px">
                         <img src="Images/moipayway.png" alt="moipayway" width="200px" height="48px">
                         <img src="Images/TagBank.png" alt="tajbank" width="127px" height="48px">
                         <img src="Images/Uba.png" alt="UBa" width="140px" height="60px">
