--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <img src="Images/Ella-Logos-02.png" alt="#" width="161px" height="34px">
             <div class="nav-link">
                 <ul class="nav-links">
-                    <li><a href="#">Home</a> </li>
+                    <li><a href="index.html">Home</a> </li>
                     <li><a href="#">About US</a> </li>
                     <li><a href="#">Our Blog</a></li>
-                    <li><a href="#">Properties</a></li>
-                    <li><a href="#">FAQS</a></li>
+                    <li><a href="mangt.html">Properties</a></li>
+                    <li><a href="FAQ.html">FAQS</a></li>
                 </ul>
             </div>
             <div class="login-btn">
@@ -33,11 +33,11 @@
     </header>
     <div class="mobile-nav">
         <ul class="m-nav-links">
-            <li><a href="#">Home</a> </li>
+            <li><a href="index.html">Home</a> </li>
             <li><a href="#">About US</a> </li>
-            <li><a href="#">Our Blog</a></li>
-            <li><a href="#">Properties</a></li>
-            <li><a href="#">FAQS</a></li>
+            <li><a href="#">Privacy policy</a></li>
+            <li><a href="mangt.html">Properties</a></li>
+            <li><a href="FAQ.html">FAQS</a></li>
         </ul>
         <div class="login-btns">
             <button class="white-btn">Login</button>
@@ -85,13 +85,23 @@
 
                 <div class="partners">
                     <h4>Partners And Members:</h4>
-                    <div class="trusted-img">
-                        <img src="Images/Flutterwave.png" alt="flutterwave" width="120px" height="50px">
-                        <img src="Images/moipayway.png" alt="moipayway" width="120px" height="30px">
-                        <img src="Images/TagBank.png" alt="tajbank" width="120px" height="48px">
-                        <img src="Images/Uba.png" alt="UBa" width="100px" height="40px">
-                        <img src="Images/kame.jpg" alt="UBa" width="110px" height="48px">
-                        <img src="Images/Allied.jpg" alt="UBa" width="140px" height="100px">
+                    <div id="logos">
+                        <div class="trusted-img" id="logos-slide">
+                            <img src="Images/Flutterwave.png" alt="flutterwave" width="120px" height="50px">
+                            <img src="Images/moipayway.png" alt="moipayway" width="120px" height="30px">
+                            <img src="Images/TagBank.png" alt="tajbank" width="120px" height="48px">
+                            <img src="Images/Uba.png" alt="UBa" width="100px" height="40px">
+                            <img src="Images/kame.jpg" alt="UBa" width="110px" height="48px">
+                            <img src="Images/Allied.jpg" alt="UBa" width="140px" height="100px">
+                        </div>
+                        <div class="trusted-img" id="logos-slide">
+                            <img src="Images/Flutterwave.png" alt="flutterwave" width="120px" height="50px">
+                            <img src="Images/moipayway.png" alt="moipayway" width="120px" height="30px">
+                            <img src="Images/TagBank.png" alt="tajbank" width="120px" height="48px">
+                            <img src="Images/Uba.png" alt="UBa" width="100px" height="40px">
+                            <img src="Images/kame.jpg" alt="UBa" width="110px" height="48px">
+                            <img src="Images/Allied.jpg" alt="UBa" width="140px" height="100px">
+                        </div>
                     </div>
                 </div>
 
@@ -156,11 +166,11 @@
                     <img src="Images/tiktok.svg" alt="#" width="30px" height="30px">
                 </div>
                 <div class="more-info">
-                    <a href="#">Property Management</a>
+                    <a href="mangt.html">Property Management</a>
                     <a href="#">About Us</a>
-                    <a href="#">Buying & Selling</a>
-                    <a href="#">User Experience</a>
-                    <a href="#">Contact Us</a>
+                    <a href="policy.html">Privacy $ Policy</a>
+                    <a href="terms.html">Term of Use</a>
+                    <a href="#">FAQs</a>
                 </div>
                 <p>© 2023 Ellamediate</p>
             </div>
