--- a/FAQ.html
+++ b/FAQ.html
@@ -151,14 +151,14 @@
                 <div class="more-info">
                     <a href="mangt.html">Property Management</a>
                     <a href="#">About Us</a>
-                    <a href="policy.html">Privacy $ Policy</a>
+                    <a href="policy.html">Privacy % Policy</a>
                     <a href="terms.html">Term of Use</a>
                     <a href="#">FAQs</a>
                 </div>
                 <p>© 2023 Ellamediate</p>
             </div>
         </footer>
-        <script src="/main.js" > </script>
+        <script src="main.js" > </script>
     
 </body>
 </html>
