--- a/policy.html
+++ b/policy.html
@@ -17,9 +17,9 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a> </li>
                     <li><a href="#">About US</a> </li>
-                    <li><a href="#">Our Blog</a></li>
-                    <li><a href="#">Properties</a></li>
-                    <li><a href="#">FAQS</a></li>
+                    <li><a href="mangt.html">Properties</a></li>
+                    <li><a href="policy.html">Privacy policy</a></li>
+                    <li><a href="FAQ.html">FAQS</a></li>
                 </ul>
             </div>
             <div class="login-btn">
@@ -35,8 +35,8 @@
         <ul class="m-nav-links">
             <li><a href="index.html">Home</a> </li>
             <li><a href="#">About US</a> </li>
-            <li><a href="#">Privacy policy</a></li>
-            <li><a href="mangt.html">Properties</a></li>
+            <li><a href="policy.html">Properties</a></li>
+            <li><a href="mangt.html">Privacy policy</a></li>
             <li><a href="FAQ.html">FAQS</a></li>
         </ul>
         <div class="login-btns">
@@ -59,7 +59,7 @@
                             </h1>
 
                         </div>
-                        <h2>ELLAMEDIATE Privacy Policy</h2>
+                        <!-- <h2>ELLAMEDIATE Privacy Policy</h2> -->
                         <p>
                             This privacy policy (this "Privacy Policy") explains how personal information is collected, used, stored, and disclosed by Ellamediate (“Ellamediate Limited,” “Ellamediate LLC,” “Ellamediate," "We," "Us," and "Our"). The provisions contained in this Privacy Policy supersede all previous notices and statements regarding our privacy practices with respect to our services.
                         </p>
@@ -257,6 +257,7 @@
                             <br>
                             ●   <strong>Request partial or complete erasure of your Personal Information</strong>
                             You may request for us to delete or remove personal data where there is no good reason for us continuing to process it. You also have the right to ask us to delete or remove your personal data where you have successfully exercised your right to object to processing, where we may have processed your information unlawfully or where we are required to erase your personal data to comply with local law. Note however that we may not always be able to comply with your request of erasure for specific legal reasons which will be notified to you, if applicable, at the time of your request.
+                            <br>
                             ●   <strong>Request the transfer of your Personal Information to another party</strong>
                             <br>
                             ●   <strong>Object to decisions being taken by automated means which produce legal effects concerning you or similarly significantly affect you</strong>
@@ -333,7 +334,7 @@
                     <a href="#">About Us</a>
                     <a href="policy.html">Privacy & Policy</a>
                     <a href="terms.html">Term of Use</a>
-                    <a href="#">FAQs</a>
+                    <a href="FAQ.html">FAQs</a>
                 </div>
                 <p>© 2023 Ellamediate</p>
             </div>
