--- a/terms.html
+++ b/terms.html
@@ -17,9 +17,9 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a> </li>
                     <li><a href="#">About US</a> </li>
-                    <li><a href="#">Our Blog</a></li>
-                    <li><a href="#">Properties</a></li>
-                    <li><a href="#">FAQS</a></li>
+                    <li><a href="mangt.html">Properties/a></li>
+                    <li><a href="policy.html">Privacy policy</a></li>
+                    <li><a href="FAQ.html">FAQS</a></li>
                 </ul>
             </div>
             <div class="login-btn">
@@ -35,7 +35,7 @@
         <ul class="m-nav-links">
             <li><a href="index.html">Home</a> </li>
             <li><a href="#">About US</a> </li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="policy.html">Privacy policy</a></li>
             <li><a href="mangt.html">Properties</a></li>
             <li><a href="FAQ.html">FAQS</a></li>
         </ul>
@@ -270,7 +270,7 @@
                     <a href="#">About Us</a>
                     <a href="policy.html">Privacy & Policy</a>
                     <a href="terms.html">Term of Use</a>
-                    <a href="#">FAQs</a>
+                    <a href="FAQ.html">FAQs</a>
                 </div>
                 <p>© 2023 Ellamediate</p>
             </div>
