--- a/FAQ.html
+++ b/FAQ.html
@@ -153,7 +153,7 @@
                     <a href="#">About Us</a>
                     <a href="policy.html">Privacy & Policy</a>
                     <a href="terms.html">Term of Use</a>
-                    <a href="#">FAQs</a>
+                    <a href="FAQ.html">FAQs</a>
                 </div>
                 <p>© 2023 Ellamediate</p>
             </div>
