--- a/index.html
+++ b/index.html
@@ -216,17 +216,17 @@
             <div class="footer-info">
                 <a href="index.html"><img src="Images/Ella-Logos-02.png" alt="#" width="280px" ></a>
                 <div class="socials">
-                    <img src="Images/twitter.svg" alt="#" width="30px" height="30px">
-                    <img src="Images/instagram.svg" alt="#" width="30px" height="30px">
-                    <img src="Images/facebook.svg" alt="#" width="30px" height="30px">
-                    <img src="Images/tiktok.svg" alt="#" width="30px" height="30px">
+                    <a target="_blank" href="https://twitter.com/ellamediatehq"><img src="Images/twitter.svg" alt="#" width="30px" height="30px"></a>
+                    <a target="_blank" href="https://www.instagram.com/ellamediate_hq/"><img src="Images/instagram.svg" alt="#" width="30px" height="30px"></a>
+                    <a target="_blank" href="https://facebook.com/officialellamediate"><img src="Images/facebook.svg" alt="#" width="30px" height="30px"></a>
+                    <a target="_blank" href="https://linkedin.com/company/ellamediatehq"><img src="Images/linkedin.svg" alt="#" width="30px" height="30px"></a>
                 </div>
                 <div class="more-info">
                     <a href="mangt.html">Property Management</a>
                     <a href="#">About Us</a>
                     <a href="policy.html">Privacy & Policy</a>
                     <a href="terms.html">Term of Use</a>
-                    <a href="#">FAQs</a>
+                    <a href="FAQ.html">FAQs</a>
                 </div>
                 <p>© 2023 Ellamediate</p>
             </div>
