--- a/FAQ.html
+++ b/FAQ.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FAQ.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../Images/Open-chat.svg"
+    />
     <script src="https://kit.fontawesome.com/f8b27b6e31.js" crossorigin="anonymous"></script>
     
     <title>Ellamediate</title>
@@ -16,7 +22,7 @@
             <div class="nav-link">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a> </li>
-                    <li><a href="#">About US</a> </li>
+                    <li><a href="Aboutus.html">About US</a> </li>
                     <li><a href="mangt.html">Properties</a></li>
                     <li><a href="policy.html">Privacy policy</a></li>
                     <li><a href="FAQ.html">FAQS</a></li>
@@ -34,7 +40,7 @@
     <div class="mobile-nav">
         <ul class="m-nav-links">
             <li><a href="index.html">Home</a> </li>
-            <li><a href="#">About US</a> </li>
+            <li><a href="Aboutus.html">About US</a> </li>
             <li><a href="mangt.html">Properties</a></li>
             <li><a href="policy.html">Privacy policy</a></li>
             <li><a href="FAQ.html">FAQS</a></li>
@@ -150,7 +156,7 @@
                 </div>
                 <div class="more-info">
                     <a href="mangt.html">Property Management</a>
-                    <a href="#">About Us</a>
+                    <a href="Aboutus.html">About Us</a>
                     <a href="policy.html">Privacy & Policy</a>
                     <a href="terms.html">Term of Use</a>
                     <a href="FAQ.html">FAQs</a>
