--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../Images/Open-chat.svg"
+    />
     <script src="https://kit.fontawesome.com/f8b27b6e31.js" crossorigin="anonymous"></script>
     
     <title>Ellamediate</title>
@@ -18,8 +24,8 @@
             <img src="Images/Ella-Logos-02.png" alt="#" width="161px" height="34px">
             <div class="nav-link">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a> </li>
-                    <li><a href="#">About US</a> </li>
+                    <li><a href="index">Home</a> </li>
+                    <li><a href="Aboutus.html">About US</a> </li>
                     <li><a href="mangt.html">Properties</a></li>
                     <li><a href="policy.html">Privacy policy</a></li>
                     <li><a href="FAQ.html">FAQS</a></li>
@@ -37,9 +43,9 @@
     <div class="mobile-nav">
         <ul class="m-nav-links">
             <li><a href="index.html">Home</a> </li>
-            <li><a href="#">About US</a> </li>
-            <li><a href="policy.html">Privacy policy</a></li>
+            <li><a href="Aboutus.html">About US</a> </li>
             <li><a href="mangt.html">Properties</a></li>
+            <li><a href="policy.html">Privacy policy</a></li>
             <li><a href="FAQ.html">FAQS</a></li>
         </ul>
         <div class="login-btns">
