--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellamediate is a proptech company opening the door to financial growth and wealth preservation by increasing access to real estate opportunities for everyone.">
     <link rel="stylesheet" href="index.css">
     <link
       rel="icon"
@@ -25,10 +26,10 @@
             <div class="nav-link">
                 <ul class="nav-links">
                     <li><a href="index">Home</a> </li>
-                    <li><a href="Aboutus.html">About US</a> </li>
-                    <li><a href="mangt.html">Properties</a></li>
-                    <li><a href="policy.html">Privacy policy</a></li>
-                    <li><a href="FAQ.html">FAQS</a></li>
+                    <li><a href="Aboutus">About US</a> </li>
+                    <li><a href="mangt">Properties</a></li>
+                    <li><a href="policy">Privacy policy</a></li>
+                    <li><a href="FAQ">FAQS</a></li>
                 </ul>
             </div>
             <div class="login-btn">
@@ -42,11 +43,11 @@
     </header>
     <div class="mobile-nav">
         <ul class="m-nav-links">
-            <li><a href="index.html">Home</a> </li>
-            <li><a href="Aboutus.html">About US</a> </li>
-            <li><a href="mangt.html">Properties</a></li>
-            <li><a href="policy.html">Privacy policy</a></li>
-            <li><a href="FAQ.html">FAQS</a></li>
+            <li><a href="index">Home</a> </li>
+            <li><a href="Aboutus">About US</a> </li>
+            <li><a href="mangt">Properties</a></li>
+            <li><a href="policy">Privacy policy</a></li>
+            <li><a href="FAQ">FAQS</a></li>
         </ul>
         <div class="login-btns">
             <button class="white-btn">Login</button>
@@ -228,11 +229,11 @@
                     <a target="_blank" href="https://linkedin.com/company/ellamediatehq"><img src="Images/linkedin.svg" alt="#" width="30px" height="30px"></a>
                 </div>
                 <div class="more-info">
-                    <a href="mangt.html">Property Management</a>
-                    <a href="#">About Us</a>
-                    <a href="policy.html">Privacy & Policy</a>
-                    <a href="terms.html">Term of Use</a>
-                    <a href="FAQ.html">FAQs</a>
+                    <a href="mangt">Property Management</a>
+                    <a href="Aboutus">About Us</a>
+                    <a href="policy">Privacy & Policy</a>
+                    <a href="terms">Term of Use</a>
+                    <a href="FAQ">FAQs</a>
                 </div>
                 <p>© 2023 Ellamediate</p>
             </div>
